// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer exists 1`] = `
<footer
  className="column-item column-item--shrink"
  id="mupFooter"
>
  <WithLoading
    className="footerStripe-main"
    inverted={true}
  >
    <WithLoading
      className="bounds--footer"
      narrow={true}
    >
      <WithLoading
        hasSeparator={true}
      >
        <WithLoading>
          <a
            className="link link--white"
            href="/create/"
          >
            Create a Meetup
          </a>
        </WithLoading>
      </WithLoading>
      <WithLoading
        className="border--none"
        hasSeparator={true}
      >
        <WithLoading
          direction="column"
          switchDirection="large"
        >
          <WithLoading
            className="margin--bottom"
          >
            <WithLoading
              direction="column"
              switchDirection="medium"
            >
              <WithLoading
                key="linkSet-0"
              >
                <FooterCategory
                  header="Your Account"
                  items={
                    Array [
                      <a
                        href="/register"
                    >
                        Settings
                    </a>,
                      <a
                        href="/logout"
                    >
                        Log out
                    </a>,
                      <a
                        href="/help"
                    >
                        Help
                    </a>,
                    ]
                  }
                />
              </WithLoading>
              <WithLoading
                key="linkSet-1"
              >
                <FooterCategory
                  header="Discover"
                  items={
                    Array [
                      <a
                        href="/groups"
                    >
                        Groups
                    </a>,
                      <a
                        href="/calendar"
                    >
                        Calendar
                    </a>,
                      <a
                        href="/topics"
                    >
                        Topics
                    </a>,
                      <a
                        href="/cities"
                    >
                        Cities
                    </a>,
                    ]
                  }
                />
              </WithLoading>
              <WithLoading
                key="linkSet-2"
              >
                <FooterCategory
                  header="Meetup"
                  items={
                    Array [
                      <a
                        href="/about"
                    >
                        About
                    </a>,
                      <a
                        href="/pro"
                    >
                        Meetup Pro
                    </a>,
                      <a
                        href="/jobs"
                    >
                        Careers
                    </a>,
                      <a
                        href="/apps"
                    >
                        Apps
                    </a>,
                      <a
                        href="/meetup_api"
                    >
                        API
                    </a>,
                    ]
                  }
                />
              </WithLoading>
            </WithLoading>
          </WithLoading>
          <WithLoading
            shrink={true}
          >
            <WithLoading
              direction="column"
              noGutters={true}
            >
              <WithLoading
                shrink={true}
              >
                <WithLoading
                  className="align--center atMedium_align--left"
                >
                  <SocialIconsList
                    localeCode="en-US"
                  />
                </WithLoading>
              </WithLoading>
              <WithLoading>
                <WithLoading
                  direction="column"
                  justify={null}
                >
                  <WithLoading
                    className="margin--top"
                    shrink={true}
                  >
                    <WithLoading>
                      <LanguageSelectInput
                        currentLocaleCode="en-US"
                        onChange={[Function]}
                      />
                    </WithLoading>
                  </WithLoading>
                  <WithLoading
                    shrink={true}
                  >
                    <WithLoading
                      className="align--center atMedium_align--left margin--top"
                    >
                      <AppBadges
                        getAppStorePhoto={[Function]}
                        language="en"
                      />
                    </WithLoading>
                  </WithLoading>
                </WithLoading>
              </WithLoading>
            </WithLoading>
          </WithLoading>
        </WithLoading>
      </WithLoading>
    </WithLoading>
  </WithLoading>
  <WithLoading
    className="footerStripe-legal border--none"
    inverted={true}
  >
    <WithLoading>
      <div
        className="padding--all"
      >
        <WithLoading
          className="text--small align--center atMedium_align--left footerList-legal"
          items={
            Array [
              <span>
                © Meetup 2018
            </span>,
              <span>
                Mock legal copy
            </span>,
            ]
          }
          separator="·"
        />
        <WithLoading
          className="text--small align--center atMedium_align--left margin--top"
          items={
            Array [
              <a
                href="/terms"
            >
                Terms
            </a>,
              <a
                href="/privacy"
            >
                Privacy
            </a>,
              <a
                href="/cookie_policy"
            >
                Cookies
            </a>,
            ]
          }
          separator="·"
        />
      </div>
    </WithLoading>
  </WithLoading>
</footer>
`;

exports[`Footer should render FooterCategory with linkSet 1`] = `
<WithLoading>
  <h4
    className="text--bold margin--bottom"
  >
    Your Account
  </h4>
  <WithLoading
    className="text--secondary text--small"
    columns={
      Object {
        "default": 2,
        "medium": 1,
      }
    }
    itemClassNames="footer-item"
    items={
      Array [
        <a
          href="/register"
      >
          Settings
      </a>,
        <a
          href="/logout"
      >
          Log out
      </a>,
        <a
          href="/help"
      >
          Help
      </a>,
      ]
    }
  />
</WithLoading>
`;

exports[`LanguageSelectInput exists 1`] = `
<WithErrorList(SelectInput)
  label="Language"
  labelClassName="visibility--a11yHide"
  name="languagePicker"
  options={
    Array [
      Object {
        "label": "English",
        "value": "en-US",
      },
      Object {
        "label": "Deutsch",
        "value": "de-DE",
      },
      Object {
        "label": "English (Australia)",
        "value": "en-AU",
      },
      Object {
        "label": "Español",
        "value": "es",
      },
      Object {
        "label": "Español (España)",
        "value": "es-ES",
      },
      Object {
        "label": "Français",
        "value": "fr-FR",
      },
      Object {
        "label": "Italiano",
        "value": "it-IT",
      },
      Object {
        "label": "日本語",
        "value": "ja-JP",
      },
      Object {
        "label": "한국어",
        "value": "ko-KR",
      },
      Object {
        "label": "Nederlands",
        "value": "nl-NL",
      },
      Object {
        "label": "Português",
        "value": "pt-BR",
      },
      Object {
        "label": "Polski",
        "value": "pl-PL",
      },
      Object {
        "label": "Русский",
        "value": "ru-RU",
      },
      Object {
        "label": "ไทย",
        "value": "th-TH",
      },
      Object {
        "label": "Türkçe",
        "value": "tr-TR",
      },
    ]
  }
/>
`;

exports[`SocialIconsList renders for de-DE locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetupDE/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/MeetupDE/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for en-AU locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/Meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for en-US locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/Meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for es locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/MeetupES/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for es-ES locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/MeetupES/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for fr-FR locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/MeetupFR/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/MeetupFR/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for it-IT locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/MeetupIT/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for ja-JP locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetupjp/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/MeetupJP/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for ko-KR locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/Meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for nl-NL locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/Meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for pl-PL locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/Meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for pt-BR locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/MeetupBR/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for ru-RU locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/Meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for th-TH locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/Meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;

exports[`SocialIconsList renders for tr-TR locale 1`] = `
<WithLoading
  items={
    Array [
      <a
        href="https://www.facebook.com/meetup/"
    >
        <Icon
            shape="external-facebookboxed"
            size="s"
        />
    </a>,
      <a
        href="https://twitter.com/Meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-twitter"
            size="s"
        />
    </a>,
      <a
        href="https://www.youtube.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-youtube"
            size="s"
        />
    </a>,
      <a
        href="https://www.instagram.com/meetup/"
    >
        <Icon
            className="margin--left"
            shape="external-instagram"
            size="s"
        />
    </a>,
      <a
        href="https://medium.com/meetup"
    >
        <Icon
            className="margin--left"
            shape="external-medium"
            size="s"
        />
    </a>,
    ]
  }
/>
`;
